2012-12-11  Alexander Pavlov  <apavlov@chromium.org>

        Web Inspector: Duplicate emulated touch events in iframe
        https://bugs.webkit.org/show_bug.cgi?id=104653

        Reviewed by Vsevolod Vlasov.

        The test incorrectly expected two synthetic touchend events from an iframe,
        while only one touchstart and one touchend should be dispatched.

        * fast/events/touch/emulated-touch-iframe-expected.txt:
        * fast/events/touch/emulated-touch-iframe.html:
        * fast/events/touch/resources/emulated-touch-iframe2.html:

2012-12-11  Ken Kania  <kkania@chromium.org>

        [Inspector] Add command for dispatching mouse events.
        https://bugs.webkit.org/show_bug.cgi?id=104074

        Reviewed by Yury Semikhatsky.

        Platform mouse event coordinates are relative to the containing window,
        but the inspector command assumes they follow standard web coordinates,
        where the origin is at the top left of the page and y increases as you
        go down. We convert the coordinates to the window before constructing
        the event. This also fixes the fact that some platforms have flipped
        coordinate systems.
        Also, update dispatchKeyEvent test to follow simpler dispatchMouseEvent
        test.

        * inspector-protocol/input/dispatchKeyEvent.html:
        * inspector-protocol/input/dispatchMouseEvent-expected.txt: Added.
        * inspector-protocol/input/dispatchMouseEvent.html: Added.

2012-12-11  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening, skip new failing tests.

        * platform/qt/TestExpectations:

2012-12-11  Noel Gordon  <noel.gordon@gmail.com>

        [chromium] Unreviewed gardening

        fast/repaint/body-background-image.html
        fast/text/font-initial.html

        * platform/chromium/TestExpectations: These tests are passing on WIN.

2012-12-11  Martin Robinson  <mrobinson@igalia.com>
