@@ -1,3 +1,15 @@
+2012-12-11  Allan Sandfeld Jensen  <allan.jensen@digia.com>
+
+        [Qt] Support third-party cookie policy for Qt clients
+        https://bugs.webkit.org/show_bug.cgi?id=45455
+
+        Unreviewed fixup.
+
+        window.location is not set for http tests in platform, so use a reset function
+        that doesn't rely on it.
+
+        * platform/qt/http/tests/cookies/strict-third-party-cookie-blocking.html:
+
 2012-12-11  Alexander Pavlov  <apavlov@chromium.org>
 
         Web Inspector: Duplicate emulated touch events in iframe
